--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <title>Page Title</title>
 </head>
 <body>
-<p>Hello World. My name is Miles Zabala</p>
+<p>Hello World. My name is Miles Edward Zabala</p>
 </body>
 </html>
