--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-<title>Page Title</title>
+	<link rel="stylesheet" href="mystyle.css">
+
+	<meta charset="utf-8"/>
+
+	<title>Information of the 2021-2022 Sacramento Kings</title>
+	
 </head>
+
 <body>
-<p>Hello World. My name is Miles Edward Zabala</p>
+	<p>Sacramento Kings</p>
 </body>
+
+
 </html>
