--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<link rel="stylesheet" href="mystyle.css">
 
-<head>
-	<link rel="stylesheet" href="mystyle.css">
+		<meta 
+			charset="utf-8"
+			name = "Information of the 2021-2022 Sacramento Kings"
 
-	<meta charset="utf-8"/>
+		/>
 
-	<title>Information of the 2021-2022 Sacramento Kings</title>
-	
-</head>
+		<title>Information of the 2021-2022 Sacramento Kings</title>
 
-<body>
-	<p>Sacramento Kings</p>
-</body>
+	</head>
+
+	<body>
+		<h1>Sacramento Kings</h1><br>
+		<a href="Schedule.html">Team Schedule</a>
+	</body>
 
 
 </html>
