--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 	<body>
 		<h1>Sacramento Kings</h1><br>
 		<a href="Schedule.html">Team Schedule</a>
+		
+		<h2>Sacramento Kings 2021-2022 Roster</h2><br>
+		<a href="Roster.html">Roster</a>
 	</body>
 
 
