--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 		
 		<h2>Sacramento Kings 2021-2022 Roster</h2><br>
 		<a href="Roster.html">Roster</a>
+		
+		<h3>Sacramento Kings 2021-2022 Player Stats</h3><br>
+		<a href="index.html">Player Stats</a>
 	</body>
 
 
