--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 	</head>
 
 	<body>
-		<h1>Sacramento Kings</h1><br>
-		<a href="Schedule.html">Team Schedule</a>
-		
+		<h2>Sacramento Kings</h2><br>
+		<a href="index.html">Team Schedule</a>
+
 		<h2>Sacramento Kings 2021-2022 Roster</h2><br>
-		<a href="Roster.html">Roster</a>
-		
-		<h3>Sacramento Kings 2021-2022 Player Stats</h3><br>
+		<a href="index.html">Roster</a>
+
+		<h2>Sacramento Kings 2021-2022 Player Stats</h2><br>
 		<a href="index.html">Player Stats</a>
 	</body>
 
