--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 	</head>
 
 	<body>
-		<h2>Sacramento Kings</h2><br>
+		<h1>Sacramento Kings</h1>
+		<br>
+		<h2>Sacramento Kings 2021-2022 Team Schedule</h2><br>
 		<a href="index.html">Team Schedule</a>
 
 		<h2>Sacramento Kings 2021-2022 Roster</h2><br>
