--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
 
 	<header><h1>2021-2022 Sacramento Kings</h1></header>
 		
-		<p>This is a website dedicated to the 2021-2022 Sacramento Kings. On home gomes, the Kings play at Golden 1 Center located in Sacramento, California.<br> </p>	
+		<p>This is a website dedicated to the 2021-2022 Sacramento Kings. During home games, the Kings play at Golden 1 Center located in Sacramento, California. 
+			<br> </p>	
+			<img src="IMG_2982.jpg" alt="The Outside of Golden 1 Center">
+			<img src="IMG_2981.jpg" alt="The Inside of Golden 1 Center">
+
 
 		<p>Visit the links below to check out the team's upcoming games, current roster and current standings in the Pacific Division.</p>
 
