--- a/Roster.html
+++ b/Roster.html
@@ -33,6 +33,8 @@
 			<li>G/F Josh Jackson #55</li>
 			<li>C Neemias Queta #88</li><br>
 		</ol>
+	<img src="kings_players.jpg" alt="4 Kings Players">
+	
 
 
 
