--- a/Roster.html
+++ b/Roster.html
@@ -48,8 +48,9 @@
 		<dd>Center</dd>
 	</dl>
 
-	<img src="kings_players.jpg" alt="4 Kings Players">
-	
+	<img src="fox.jpg" alt="Sacramento Kings center Domantas Sabonis (13) and Sacramento Kings guard De'Aaron Fox (5) reacts after basket in the fourth quarter during a game at Golden 1 Center on Wednesday, Feb. 9, 2022 in Sacramento">
+	<p>Above Image: by Paul Kitagaki Jr. from ZUMA Press, Inc./Alamy Live News, at https://www.alamy.com/sacramento-ca-usa-9th-feb-2022-sacramento-kings-center-domantas-sabonis-13-and-sacramento-kings-guard-deaaron-fox-5-reacts-after-basket-in-the-fourth-quarter-during-a-game-at-golden-1-center-on-wednesday-feb-9-2022-in-sacramento-credit-image-paul-kitagaki-jrzuma-press-wire-credit-zuma-press-incalamy-live-news-image460115658.html?pv=1&stamp=2&imageid=5E7F6BB1-18C9-477E-BA41-C69F91BC09E3&p=151045&n=1&orientation=0&pn=1&searchtype=0&IsFromSearch=1&srch=foo%3Dbar%26st%3D0%26sortby%3D2%26qt%3DDe%27Aaron%2520Fox%2520domantas%26qt_raw%3DDe%27Aaron%2520Fox%2520domantas%26qn%3D%26lic%3D3%26edrf%3D0%26mr%3D0%26pr%3D0%26aoa%3D1%26creative%3D%26videos%3D%26nu%3D%26ccc%3D%26bespoke%3D%26apalib%3D%26ag%3D0%26hc%3D0%26et%3D0x000000000000000000000%26vp%3D0%26loc%3D0%26ot%3D0%26imgt%3D0%26dtfr%3D%26dtto%3D%26size%3D0xFF%26blackwhite%3D%26cutout%3D%26archive%3D1%26name%3D%26groupid%3D%26pseudoid%3D%26userid%3D%26id%3D%26a%3D%26xstx%3D0%26cbstore%3D1%26resultview%3DsortbyPopular%26lightbox%3D%26gname%3D%26gtype%3D%26apalic%3D%26tbar%3D1%26pc%3D%26simid%3D%26cap%3D1%26customgeoip%3D%26vd%3D0%26cid%3D%26pe%3D%26so%3D%26lb%3D%26pl%3D0%26plno%3D%26fi%3D0%26langcode%3Den%26upl%3D0%26cufr%3D%26cuto%3D%26howler%3D%26cvrem%3D0%26cvtype%3D0%26cvloc%3D0%26cl%3D0%26upfr%3D%26upto%3D%26primcat%3D%26seccat%3D%26cvcategory%3D*%26restriction%3D%26collectiontype%3D%26random%3D%26ispremium%3D1%26flip%3D0%26contributorqt%3D%26plgalleryno%3D%26plpublic%3D0%26viewaspublic%3D0%26isplcurate%3D0%26imageurl%3D%26saveQry%3D%26editorial%3D1%26t%3D0%26filters%3D0</p>
+	<br>
 
 
 
