--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	<body>
 
-	<header><h1>2021-2022 Sacramento Kings</h1></header>
+	<header><h1 style="color:purple;font-size:40px;">2021-2022 Sacramento Kings</h1></header>
 
 		
 		<p>This is a website dedicated to the 2021-2022 Sacramento Kings. During home games, the Kings play at Golden 1 Center located in Sacramento, California. 
