--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	<body>
 
-	<header><h1 style="color:purple;font-size:40px;">2021-2022 Sacramento Kings</h1></header>
+	<header><h1>2021-2022 Sacramento Kings</h1></header>
 
 		
 		<p>This is a website dedicated to the 2021-2022 Sacramento Kings. During home games, the Kings play at Golden 1 Center located in Sacramento, California. 
@@ -26,6 +26,9 @@
 			<img src="g1Center.jpg" alt="The Outside of Golden 1 Center">
 			<p><font size="-1">Aerial view of the Golden 1 Arena in downtown Sacramento home of the NBA Kings by Timothy Swope at https://www.alamy.com/aerial-view-of-the-golden-1-arena-in-downtown-sacramento-home-of-the-nba-kings-image364608523.html?pv=1&stamp=2&imageid=A6721E0B-469E-4B19-8108-DDC124766073&p=29292&n=0&orientation=0&pn=1&searchtype=0&IsFromSearch=1&srch=foo%3dbar%26st%3d0%26pn%3d1%26ps%3d100%26sortby%3d2%26resultview%3dsortbyPopular%26npgs%3d0%26qt%3dsacramento%2520kings%26qt_raw%3dsacramento%2520kings%26lic%3d3%26mr%3d0%26pr%3d0%26ot%3d0%26creative%3d%26ag%3d0%26hc%3d0%26pc%3d%26blackwhite%3d%26cutout%3d%26tbar%3d1%26et%3d0x000000000000000000000%26vp%3d0%26loc%3d0%26imgt%3d0%26dtfr%3d%26dtto%3d%26size%3d0xFF%26archive%3d1%26groupid%3d%26pseudoid%3d%26a%3d%26cdid%3d%26cdsrt%3d%26name%3d%26qn%3d%26apalib%3d%26apalic%3d%26lightbox%3d%26gname%3d%26gtype%3d%26xstx%3d0%26simid%3d%26saveQry%3d%26editorial%3d1%26nu%3d%26t%3d%26edoptin%3d%26customgeoip%3d%26cap%3d1%26cbstore%3d1%26vd%3d0%26lb%3d%26fi%3d2%26edrf%3d%26ispremium%3d1%26flip%3d0%26pl%3d</font></p>
 			<br>
+
+
+
 
 		<p>Visit the links below to check out the team's upcoming games, current roster and current standings in the Pacific Division.</p>
 
