--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 
 		<meta 
 			charset="utf-8"
-			name = "Information of the 2021-2022 Sacramento Kings"
-
-		/>
+			name = "Information of the 2021-2022 Sacramento Kings">
+		
 
 		<title>Information on the 2021-2022 Sacramento Kings</title>
 
