--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
 
-		<p>Visit the links below to check out the team's upcoming games, current roster and current standings in the Pacific Division.</p>
+		<p><strong>Visit the links below to check out the team's upcoming games, current roster and current standings in the Pacific Division.</strong></p>
 
 		<nav>
 			<ul> 
